<resources>
    <string name="app_name">Kesk\'heu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Votre nom d\'utilisateur:</string>
    <string name="nav_header_subtitle">NON CONNECTE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="Boutton_Utilisateur">Valider</string>

    <string name="headRecyclerView">Debut Recycler view</string>

    <string name="Boutton_DemandeQuestion">Valider</string>
    <string name="EntreeDemandeQuestion">Number</string>

    <string name="Username">Utilisateur</string>
    <string name="Mdp">Mot de passe</string>
    <string name="action_EntreeUser">Ecrivez</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Reponse</string>
    <string name="menu_slideshow">Compte</string>
    <string name="button">Rafraichir</string>
    <string name="Test_Bouton">Nombre question</string>

    <string name="Creation">Creation</string>
    <string name="Connection">Connection</string>

    <string name="Reponse">Poser une question</string>
    <string name="todo">TODO</string>
    <string name="EntreeUser">Username</string>
    <string name="bienvenu_sur_keskheu">Bienvenu sur Keskheu</string>
    <string name="l_cran_d_accueil_permet_de_voir_la_liste_des_questions">L\'écran d\'accueil permet de voir la liste des questions</string>
    <string name="appuyez_pour_continuer_et_acc_der_l_application">Appuyez pour continuer et accéder à l\'application</string>
    <string name="pour_voir_les_r_ponses_cliquez_sur_une_question">Pour voir les réponses, cliquez sur une question</string>
    <string name="pour_poster_une_question_ou_une_r_ponse_veuillez_vous_connectez">Pour poster une question ou une réponse, veuillez vous connectez</string>
    <string name="acc_der_keskheu">Accéder à Keskheu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informationapplication">InformationApplication</string>
    <string name="entrez_un_mdp">Entrez un mdp</string>
    <string name="joindre_un_fichier">Joindre un fichier</string>
    <string name="veuillez_patienter">Veuillez patienter</string>
    <string name="votre_compte">Votre compte</string>
    <string name="acc_der_a_son_compte">Accéder a son compte</string>
    <string name="se_connecter">Se connecter</string>
    <string name="vos_messages_priv_es">Vos messages privées:</string>
    <string name="envoyer">Envoyer</string>
    <string name="message">Message</string>
    <string name="destinataire">Destinataire :</string>
    <string name="connect_en_tant_que">Connecté en tant que :</string>
    <string name="textview">TextView</string>
    <string name="veuillez_entrer_votre_message">Veuillez entrer votre message</string>
</resources>