<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnecteFragment"
    android:id="@+id/frameLayout3">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayoutListPM"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewListPM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/textMessage"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/veuillez_entrer_votre_message"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listDestinataire" />

    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="71dp"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="731dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <Button
        android:id="@+id/boutonEnvoiPM"
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="19dp"
        android:text="@string/envoyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMessage" />

    <TextView
        android:id="@+id/destinataire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="45dp"
        android:text="@string/destinataire"
        app:layout_constraintBottom_toTopOf="@+id/contenuMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameDisplay" />

    <TextView
        android:id="@+id/contenuMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:text="@string/message"
        app:layout_constraintEnd_toStartOf="@+id/textMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinataire" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="176dp"
        android:text="@string/vos_messages_priv_es"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonEnvoiPM" />

    <Spinner
        android:id="@+id/listDestinataire"
        android:layout_width="268dp"
        android:layout_height="25dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="28dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/textMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/destinataire"
        app:layout_constraintTop_toBottomOf="@+id/usernameDisplay" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="23dp"
        android:text="@string/connect_en_tant_que"
        app:layout_constraintEnd_toStartOf="@+id/usernameDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>